--- a/controller/casc.yaml
+++ b/controller/casc.yaml
@@ -1,4 +1,5 @@
 jenkins:
+  numExecutors: 0
   securityRealm:
     local:
       allowsSignup: false
@@ -24,7 +25,7 @@ jenkins:
         remoteFS: "/home/jenkins"
         # remoteFS: "/var/lib/jenkins"
         launcher:
-          SSHLauncher:
+          SSH:
             host: agent
             port: 22
             credentialsId: agent_ssh_key
